fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     /* removes default paddings and margins */
     font-family: sans-serif;
 }
-/* vw and vh represent a percentage of the viewport's width and height */
 
 @font-face {
     font-family: 'Norse-Bold';
@@ -13,10 +12,14 @@
 }
 
 .logo-name {
+    display: flex;
+    align-items: center;
     font-family: 'Norse-Bold', sans-serif;
     color: white;
     font-size: 5rem;
+
 }
+
 .main {
     display: flex;
     height: 100vh;
@@ -36,14 +39,16 @@
     /* makes the background cover the entire image container and may be cropped a little to fit */
 }
 
+.right-side {
+    height: 100vh;
+    overflow: hidden;
+}
 
 .full-logo {
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
     margin-top: 20vh;
-    
-
 }
 
 .full-logo img {
@@ -78,22 +83,22 @@
     padding-left: 5%;
     padding-top: 5vh;
     padding-bottom: 5vh;
-
 }
-
 
 button {
     display: flex;
     justify-content: center;
+    white-space: nowrap;
     background-color: #596D48;
     border: 1px solid #596D48;
     color: white;
     font-weight: bolder;
     width: 20%;
     height: 5%;
-    padding: 2vh 3vw;
+    padding: 2vh 5vw;
     border-radius: 10px;
 }
+
 button:hover {
     cursor: pointer;
 }
@@ -103,8 +108,8 @@ button:hover {
     flex-direction: column;
     gap: 2vw;
     padding-left: 5%;
-    padding-top: 7%;
-    padding-bottom: 5%;
+    padding-top: 3%;
+    padding-bottom: 10%;
     background-color: rgb(248, 248, 248);
     /* background-color: red; */
 }
@@ -120,10 +125,15 @@ button:hover {
 
 input[type="text"], input[type="tel"], input[type="email"] {
     appearance: none;
+    border: 1px solid #E5E7EB;
+    height: 20px;
+    border-radius: 5px;
 }
 
 .form-div label {
     display: block;
+    font-size: 10px;
+    text-transform: uppercase;
     margin-bottom: 0.5rem;
 }
 
@@ -134,23 +144,23 @@ They start on a new line and have space above and below them. */
 
 .form-div input {
     display: block;
-    width: 100%;
+    width: 200px;
 }
 
 .form-div input:focus {
     outline: none;
     border-color: blue;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* More prominent shadow */
 }
 
 input:invalid {
     border: 2px solid red;
-    box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(255, 0, 0, 0.3); /* More prominent shadow */
 }
 
 input:focus:invalid {
     border-color: red;
-    box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(255, 0, 0, 0.3); /* More prominent shadow */
 }
 
 .login-request {
